--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.19.3",
+    "install": "^0.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
